# imgui-native

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml  test.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
lib/: module.cpp  refs.cpp  refs.h  types.cpp  types.d.ts  types.h
lib/dts/: ref.d.ts
lib/ref/: bool.cpp  bool.h  callback.cpp  callback.h  double.cpp  double.h  float.cpp  float.h  int.cpp  int.h  string.cpp  string.h  string_list.cpp  string_list.h
prebuild/: README.md
src/: index.js  index.ts
tests/: backends.test.js  core.test.js
